Fixed Image in Button getting squished

--- a/src/dzeio/Button/Button.module.styl
+++ b/src/dzeio/Button/Button.module.styl
@@ -172,3 +172,6 @@ btn($color, $theme)
 
 	100%
 		transform rotate(365deg)
+
+.img
+	min-width 16px
